--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           path: .\
           recurse: true
+          excludeRule: '"PSAvoidUsingInvokeExpression"'
           output: results.sarif
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v2
