--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "powershell.codeFormatting.useCorrectCasing": true,
     "powershell.codeFormatting.whitespaceBetweenParameters": true,
     "editor.formatOnSave": true,
-    "powershell.codeFormatting.avoidSemicolonsAsLineTerminators": true
+    "powershell.codeFormatting.avoidSemicolonsAsLineTerminators": true,
+    "pester.autoRunOnSave": false
 }
